--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <h1>Il mio viaggio a Londra</h1>
         <section>
-            <img src="../london1.jpg" alt="londrasx">
-            <img src="../london2.jpg" alt="londracenter">
-            <img src="../london3.jpg" alt="londradx">
+            <img src="./img/london1.jpg" alt="londrasx">
+            <img src="./img/london2.jpg" alt="londracenter">
+            <img src="./img/london3.jpg" alt="londradx">
         </section>
         <hr>
 
@@ -83,7 +83,8 @@
             <h2>Info Utili:</h2>
             
             <ol>
-                <li>Numeri utili di emergenza</li>
+                <li> 
+                    Numeri utili di emergenza
                     <ul>
                         <li>
                             <strong>999</strong>- numero emergenza
@@ -95,18 +96,23 @@
                           <strong>111</strong>- numero assistenza medica
                         </li>                       
                     </ul>
+                </li>
 
-                <li>Hotel</li>
+                <li>
+                    Hotel
                     <ul>
                         <li><strong> Nome Hotel:</strong> Buckingam Palace</li>
                         <li><strong> Indirizzo hotel:</strong> Westminster, London, Regno Unito</li>
                     </ul>
+                </li>
 
-                <li>Aereo</li>
+                <li>
+                    Aereo
                     <ul>
                         <li><strong>Volo di andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
                         <li><strong> Volo di ritorno:</strong> Y1236X, ore 18:30 da London</li>
                     </ul>
+                </li>
                     
             </ol>
 
